# wqArch

./: .bash_history  .bashrc  .gitignore  .viminfo  111.txt  README.md  jpg2rgb  test.jp2
jasper-1.900.1.uuid/: config.status  configure.ac
jasper-1.900.1.uuid/autom4te.cache/: output.0  requests  traces.0
jasper-arm/: config.h.in~  config.status  libtool
jpegLisbs/: jpg2rgb.c
jpegLisbs/jasper-arm/: aclocal.m4  config.h.in  configure  configure.ac
jpegLisbs/jasper-arm/autom4te.cache/: output.0  output.4  output.6  requests  traces.2  traces.3  traces.6  traces.7  traces.8
jpegLisbs/jasper-arm/src/appl/.deps/: imgcmp.Po
jpegLisbs/jasper-arm/src/libjasper/base/.deps/: jas_cm.Plo  jas_debug.Plo  jas_icc.Plo  jas_stream.Plo
jpegLisbs/jasper-arm/src/libjasper/bmp/: Makefile
jpegLisbs/jasper-arm/src/libjasper/include/: Makefile
jpegLisbs/jasper-arm/src/libjasper/include/jasper/: jas_config.h
jpegLisbs/jasper-arm/src/libjasper/jp2/: Makefile
jpegLisbs/jasper-arm/src/libjasper/jp2/.deps/: jp2_cod.Plo
jpegLisbs/jasper-arm/src/libjasper/jpc/: Makefile
jpegLisbs/jasper-arm/src/libjasper/jpc/.deps/: jpc_bs.Plo  jpc_cs.Plo  jpc_enc.Plo  jpc_math.Plo  jpc_mct.Plo  jpc_mqdec.Plo  jpc_t1dec.Plo  jpc_tsfb.Plo
jpegLisbs/jasper-arm/src/libjasper/jpg/: Makefile.am
jpegLisbs/jasper-arm/src/libjasper/pgx/: Makefile
jpegLisbs/jasper-arm/src/libjasper/pgx/.deps/: pgx_dec.Plo  pgx_enc.Plo
jpegLisbs/jasper-arm/src/libjasper/pnm/.deps/: pnm_cod.Plo  pnm_dec.Plo
jpegLisbs/jasper-arm/src/libjasper/ras/.deps/: ras_dec.Plo
mytools/: ftp_get.sh  ftp_put.sh
mytools/rar/: makefile
share/: test.jp2
(+69 files in other folders)
